--- a/EmulairWEB/Views/Home/Index.cshtml
+++ b/EmulairWEB/Views/Home/Index.cshtml
@@ -1,8 +1,39 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+	ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Emulair - Întrebări frecvente</title>
+	<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="~/css/home.css" />
+</head>
+<body>
+
+	<h1>GAMES</h1>
+
+	<section aria-label="Game Photos">
+		<div class="carousel" data-carousel>
+			<button class="carousel-button prev" data-carousel-button="prev">&#8656</button>
+			<button class="carousel-button next" data-carousel-button="next">&#8658;</button>
+
+			<ul data-slides>
+				<li class="slide" data-active>
+					<img src="images/mega-man-cover.jpeg"></img>
+				</li>
+				<li class="slide"><img src="images/3-D Genesis.png"></img></li>
+				<li class="slide"><img src="images/3-D Ghost Attack.png"></img></li>
+				<li class="slide"><img src="images/3-D Havoc.png"></img></li>
+				<li class="slide"><img src="images/3-D Tic-Tac-Toe.png"></img></li>
+			</ul>
+		</div>
+	</section>
+
+	<!-- Adaugă altele aici -->
+
+	<script src="~/js/home.js"></script>
+</body>
+</html>
