--- a/EmulairWEB/Views/Home/Index.cshtml
+++ b/EmulairWEB/Views/Home/Index.cshtml
@@ -10,10 +10,13 @@
 	<title>Emulair - Întrebări frecvente</title>
 	<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="~/css/home.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
 </head>
 <body>
 
 	<h1>EMULAIR</h1>
+
+	<!-- Carousel Section -->
 
 	<section class="carousel-section" aria-label="Game Photos">
 		<div class="carousel" data-carousel>
@@ -30,7 +33,9 @@
 		</div>
 	</section>
 
-	<section class="flex-row-container" aria-label="Description Text">
+	<!-- Search Game Section-->
+
+	<section class="flex-row-container search-game-section" aria-label="Description Text">
 		<div class="flex-column-container left-div">
 			<h2 data-first-row>Best Games</h2>
 			<h2 data-second-row>That you can play</h2>
@@ -53,6 +58,71 @@
 			<img src="images/3-D Ghost Attack.png" data-second-photo></img>
 		</div>
 	</section>
+
+	<!-- Testimonials -->
+
+    <div class="testimonials">
+        <div class="inner">
+            <h1 id="header-testimonial">Testimonials</h1>
+            <div class="border"></div>
+
+            <div class="row">
+                <div class="col">
+                    <div class="testimonial">
+                        <img src="~/images/p1.png" alt="">
+                        <div class="name">Full name</div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="testimonial">
+                        <img src="~/images/p2.png" alt="">
+                        <div class="name">Full name</div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="testimonial">
+                        <img src="~/images/p3.png" alt="">
+                        <div class="name">Full name</div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 	<!-- Adaugă altele aici -->
 
