--- a/EmulairWEB/wwwroot/css/site.css
+++ b/EmulairWEB/wwwroot/css/site.css
@@ -65,10 +65,50 @@ body {
     margin-bottom: 60px;
 }
 
+/* footer section */
+
 .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     white-space: nowrap;
     line-height: 60px; /* Vertically center the text there */
+}
+
+body {
+    padding: 0;
+    margin: 0 !important;
+}
+
+footer > ul {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    list-style: none;
+    background-color: #D9D9D9;
+    color: black;
+    margin: 0;
+    padding-left: 5rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+footer > ul > li {
+    display: inline-block;
+    width: 150px;
+    padding-left: 0.7rem;
+    padding-top: 0.7rem;
+    padding-bottom: 0.7rem;
+    cursor: pointer;
+    font-weight: 500;
+    transition: 200ms color, 200ms background-color;
+}
+
+footer > ul > li:hover {
+    padding-top: 0.7rem;
+    padding-bottom: 0.7rem;
+    cursor: pointer;
+    background-color: black;
+    color: #D9D9D9;
+    font-weight: 500;
 }
