--- a/EmulairWEB/Views/Home/Index.cshtml
+++ b/EmulairWEB/Views/Home/Index.cshtml
@@ -11,10 +11,14 @@
 	<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="~/css/home.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+    <style>
+        h1[data-title] {
+            padding-top: 7rem;
+        }
+    </style>
 </head>
 <body>
-
-	<h1>EMULAIR</h1>
+	<h1 data-title>EMULAIR</h1>
 
 	<!-- Carousel Section -->
 
