news + resolved auth

--- a/EmulairWEB/Views/Home/Index.cshtml
+++ b/EmulairWEB/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="jumbotron jumbotron-fluid text-center">
+    <div class="container">
+        <h1 class="display-4">Welcome to CollectiHaven</h1>
+        <p class="lead">Discover a world of collectibles and unique items.</p>
+    </div>
 </div>
