--- a/EmulairWEB/Views/Shared/_Layout.cshtml
+++ b/EmulairWEB/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="Index">News</a>
+                        </li>
                         @if (CurrentUser.IsAuthenticated)
                         {
                             <li class="nav-item">
