News & Comments Page Feature

--- a/EmulairWEB/Views/FAQ/Index.cshtml
+++ b/EmulairWEB/Views/FAQ/Index.cshtml
@@ -30,6 +30,10 @@
 			padding-bottom: 5rem;
 		}
 
+		h1[data-title] {
+			padding-top: 7rem;
+		}
+
 		h2 {
 			color: #EDE0DE;
 			margin-bottom: 0;
@@ -74,7 +78,7 @@
 </head>
 <body>
 
-	<h1>FAQ</h1>
+	<h1 data-title>FAQ</h1>
 
 	<div class="faq-item">
 		<div onclick="toggleAnswer(this, 1)" class="flex-container show-answer">
