--- a/EmulairWEB/Views/News/Index.cshtml
+++ b/EmulairWEB/Views/News/Index.cshtml
@@ -58,6 +58,55 @@
         .news-details-container {
             padding-bottom: 6rem;
         }
+
+        body {
+            min-height: 100vh;
+        }
+        /* nav css */
+        nav {
+            background-color: #A08C8A;
+        }
+
+        nav > ul {
+            background-color: #A08C8A;
+            z-index: 3;
+            width: 70vw;
+            position: fixed;
+            left: 16%;
+            display: flex;
+            list-style: none;
+            color: #EDE0DE;
+            font-weight: 500;
+            padding: 0;
+        }
+
+        nav > ul > li {
+            transition: 200ms color, 200ms background-color;
+            cursor: pointer;
+        }
+
+        nav > ul > li:hover {
+            color: black;
+            background-color: #EDE0DE;
+        }
+
+        nav > ul > li:hover > a {
+            color: black;
+            background-color: #EDE0DE;
+        }
+
+        nav > ul > li > a:hover {
+            color: black;
+            background-color: #EDE0DE;
+        }
+
+        nav > ul > li > a {
+            display: inline-block;
+            text-decoration: none;
+            color: #D9D9D9;
+            font-weight: 500;
+            padding: 0.7rem 0.5rem;
+        }
     </style>
 </head>
 <body class="news-page">
