--- a/EmulairWEB/wwwroot/css/site.css
+++ b/EmulairWEB/wwwroot/css/site.css
@@ -65,7 +65,64 @@ body {
     margin-bottom: 60px;
 }
 
-/* footer section */
+/* footer section
+-------------------------------------------------- */
+
+body {
+    min-height: 100vh;
+}
+
+/* nav css
+ -------------------------------------------------- */
+
+nav {
+    background-color: #A08C8A;
+}
+
+nav > ul {
+    background-color: #A08C8A;
+    z-index: 3;
+    width: 70vw;
+    position: fixed;
+    left: 16%;
+    display: flex;
+    list-style: none;
+    color: #EDE0DE;
+    font-weight: 500;
+    padding: 0;
+}
+
+nav > ul > li {
+    transition: 200ms color, 200ms background-color;
+    cursor: pointer;
+}
+
+nav > ul > li:hover {
+    color: black;
+    background-color: #EDE0DE;
+}
+
+nav > ul > li:hover > a {
+    color: black;
+    background-color: #EDE0DE;
+}
+
+nav > ul > li > a:hover {
+    color: black;
+    background-color: #EDE0DE;
+}
+
+nav > ul > li > a {
+    display: inline-block;
+    text-decoration: none;
+    color: #D9D9D9;
+    font-weight: 500;
+    padding: 0.7rem 0.5rem;
+}
+
+
+/* footer css
+-------------------------------------------------- */
 
 .footer {
     position: absolute;
