Restructured the css folders and files

--- a/EmulairWEB/Views/News/Create.cshtml
+++ b/EmulairWEB/Views/News/Create.cshtml
@@ -3,145 +3,52 @@
 @{
     ViewData["Title"] = "Create";
 }
-<head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-    <link rel="stylesheet" href="~/css/News/Create.css" />
-    <style>
-        body {
-            font-family: 'Plus Jakarta Sans', sans-serif;
-            margin: 20px;
-            background-color: #201A19;
-            color: #EDE0DE;
-        }
 
-        h1[data-title] {
-            padding: 7rem 0 2rem 0;
-        }
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="~/css/News/Delete.css" />
+    </head>
+    <h1>Create</h1>
 
-        a[data-create] {
-            text-decoration: none;
-            color: #EDE0DE;
-            padding: 1rem;
-            transition: 200ms color, 200ms background-color;
-        }
-
-        a[data-create]:hover {
-            color: #201A19;
-            background-color: #EDE0DE;
-        }
-
-        .news-image-container {
-            margin-top: 5rem;
-        }
-
-        .news-image {
-            width: 70vw;
-        }
-
-        h3.news-title, .news-summary {
-            text-decoration: underline rgba(0, 0, 0, 0) !important;
-            color: #EDE0DE;
-            padding: 1rem;
-            transition: 200ms color, 200ms background-color;
-            margin: 0;
-        }
-
-        h3.news-title:hover, .news-summary:hover {
-            color: #201A19;
-            background-color: #EDE0DE;
-        }
-
-        .news-details-container {
-            padding-bottom: 6rem;
-        }
-
-        body {
-            min-height: 100vh;
-        }
-        /* nav css */
-        nav {
-            background-color: #A08C8A;
-        }
-
-            nav > ul {
-                background-color: #A08C8A;
-                z-index: 3;
-                width: 70vw;
-                position: fixed;
-                left: 16%;
-                display: flex;
-                list-style: none;
-                color: #EDE0DE;
-                font-weight: 500;
-                padding: 0;
-            }
-
-                nav > ul > li {
-                    transition: 200ms color, 200ms background-color;
-                    cursor: pointer;
-                }
-
-                    nav > ul > li:hover {
-                        color: black;
-                        background-color: #EDE0DE;
-                    }
-
-                        nav > ul > li:hover > a {
-                            color: black;
-                            background-color: #EDE0DE;
-                        }
-
-                    nav > ul > li > a:hover {
-                        color: black;
-                        background-color: #EDE0DE;
-                    }
-
-                    nav > ul > li > a {
-                        display: inline-block;
-                        text-decoration: none;
-                        color: #D9D9D9;
-                        font-weight: 500;
-                        padding: 0.7rem 0.5rem;
-                    }
-    </style>
-</head>
-<h1>Create</h1>
-
-<h4>News</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" id="title" class="form-control" />
-                <div class="text-danger" id="titleError" style="display: none;">Title cannot exceed 50 characters.</div>
-                <span asp-validation-for="Title" id="errorMessageTitle" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" id="description" class="form-control" />
-            <span asp-validation-for="Description" id="errorMessageDescription" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label for="images" class="control-label">Images</label>
-                <input type="file" id="images" name="images" accept=".jpg, .jpeg, .png" multiple class="form-control-file" />
-                <br />
-                <span id="imagesExtensionError" class="text-danger" style="display: none;">Only JPG and PNG files are allowed.</span>
-                <span id="imagesError" class="text-danger" style="display: none;">Add atleast 1 image!</span>
-                <span asp-validation-for="Images" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <button id="submit-button-images" type="button" value="Create" class="btn btn-primary">Create</button>
-            </div>
+    <h4>News</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Title" class="control-label"></label>
+                    <input asp-for="Title" id="title" class="form-control" />
+                    <div class="text-danger" id="titleError" style="display: none;">Title cannot exceed 50 characters.</div>
+                    <span asp-validation-for="Title" id="errorMessageTitle" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Description" class="control-label"></label>
+                    <input asp-for="Description" id="description" class="form-control" />
+                <span asp-validation-for="Description" id="errorMessageDescription" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="images" class="control-label">Images</label>
+                    <input type="file" id="images" name="images" accept=".jpg, .jpeg, .png" multiple class="form-control-file" />
+                    <br />
+                    <span id="imagesExtensionError" class="text-danger" style="display: none;">Only JPG and PNG files are allowed.</span>
+                    <span id="imagesError" class="text-danger" style="display: none;">Add atleast 1 image!</span>
+                    <span asp-validation-for="Images" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <button id="submit-button-images" type="button" value="Create" class="btn btn-primary">Create</button>
+                </div>
+        </div>
     </div>
-</div>
 
-<div>
-    <br />
-    <a asp-action="Index" class="back-button">Back to List</a>
-</div>
+    <div>
+        <br />
+        <a asp-action="Index" class="back-button">Back to List</a>
+    </div>
+</html>
 
 @section Scripts {
     <script src="~/js/News/ExtensionCheck.js"></script>
