--- a/EmulairWEB/Views/FAQ/Index.cshtml
+++ b/EmulairWEB/Views/FAQ/Index.cshtml
@@ -9,72 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Emulair - Întrebări frecvente</title>
 	<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-	<style>
-		body {
-			font-family: 'Plus Jakarta Sans', sans-serif;
-			margin: 20px;
-			background-color: #201A19;
-		}
-
-		.faq-item {
-			margin-bottom: 3rem;
-			border-bottom: 1px solid #ccc;
-			padding-bottom: 10px;
-		}
-
-		h1 {
-			font-weight: 800;
-			color: #EDE0DE;
-			font-size: 7rem;
-			text-align: center;
-			padding-bottom: 5rem;
-		}
-
-		h1[data-title] {
-			padding-top: 7rem;
-		}
-
-		h2 {
-			color: #EDE0DE;
-			margin-bottom: 0;
-		}
-
-		.answer {
-			display: none;
-			font-weight: 400;
-			font-size: 1.1rem;
-			color: #EDE0DE;
-			margin-top: 10px;
-		}
-
-		.flex-container {
-			margin-bottom: 2rem;
-		}
-
-		.image-container {
-			margin-right: 10px;
-		}
-
-		.image-container img {
-			filter: invert(100%);
-			transition: transform 0.2s;
-		}
-
-
-		.answer {
-			color: #EDE0DE;
-		}
-
-		.show-answer {
-			cursor: pointer;
-			color: #3498db;
-		}
-
-		.flex-container {
-			display: flex;
-			align-items: center;
-		}
-	</style>
+	<link rel="stylesheet" href="~/css/FAQ/Index.css" />
 </head>
 <body>
 
