--- a/EmulairWEB/Views/Shared/_Layout.cshtml
+++ b/EmulairWEB/Views/Shared/_Layout.cshtml
@@ -43,7 +43,9 @@
                 <div>
                     @if (CurrentUser.IsAuthenticated)
                     {
-                        @CurrentUser.Email
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UserAccount" asp-action="ProfilePage"><i class="fas fa-user-circle"></i> @CurrentUser.Email</a>
+                        </li>
                         <a asp-controller="UserAccount" asp-action="Logout">Log out</a>
                     }
                     else
